manifests/dev/kubernetes-resources.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: agreementrenewmanagementworker-ingress
  annotations:
    app.gitlab.com/app: dbe-agreementrenew-workeragreementrenewmanagement
    app.gitlab.com/env: dev
spec:
  rules:
    - host: apis.apps-fenix-dev.tigo.com.gt
      http:
        paths:
          - path: /v1/workermanagement
            pathType: Prefix
            backend:
              serviceName: agreementrenewmanagementworker-service
              servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.gitlab.com/app: dbe-agreementrenew-workeragreementrenewmanagement
    app.gitlab.com/env: dev
  labels:
    app.tigo.com.gt/application: agreementrenewmanagementworker
    app.tigo.com.gt/owner: ssd
    app.tigo.com.gt/project: worker-agreement-renew-management
  name: agreementrenewmanagementworker-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.tigo.com.gt/application: agreementrenewmanagementworker
    app.tigo.com.gt/owner: ssd
    app.tigo.com.gt/project: worker-agreement-renew-management
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.gitlab.com/app: dbe-agreementrenew-workeragreementrenewmanagement
    app.gitlab.com/env: dev
  labels:
    app.tigo.com.gt/application: agreementrenewmanagementworker
    app.tigo.com.gt/owner: ssd
    app.tigo.com.gt/project: worker-agreement-renew-management
    app.tigo.com.gt/environment: dev
    app.tigo.com.gt/version: v1.0.0
    app.tigo.com.gt/release: stable
    app.tigo.com.gt/tier: backend
  name: agreementrenewmanagementworker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.tigo.com.gt/application: agreementrenewmanagementworker
      app.tigo.com.gt/owner: ssd
      app.tigo.com.gt/project: worker-agreement-renew-management
      app.tigo.com.gt/environment: dev
      app.tigo.com.gt/version: v1.0.0
      app.tigo.com.gt/release: stable
      app.tigo.com.gt/tier: backend
  template:
    metadata:
      annotations:
        app.gitlab.com/app: dbe-agreementrenew-workeragreementrenewmanagement
        app.gitlab.com/env: dev
      labels:
        app.tigo.com.gt/application: agreementrenewmanagementworker
        app.tigo.com.gt/owner: ssd
        app.tigo.com.gt/project: worker-agreement-renew-management
        app.tigo.com.gt/environment: dev
        app.tigo.com.gt/version: v1.0.0
        app.tigo.com.gt/release: stable
        app.tigo.com.gt/tier: backend
    spec:
      containers:
        - image: registry-fenix-dev.tigo.com.gt/worker-agreement-renew-management/agreementrenewmanagementworker:77824c85d0c02adc10b0f933d2e04c16111d3a2b
          ports:
            - name: http
              containerPort: 8080
          imagePullPolicy: IfNotPresent
          name: agreementrenewmanagementworker
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "378Mi"
              cpu: "1000m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
      imagePullSecrets:
        - name: regcred
      nodeSelector:
        node.tigo.com.gt/digital: "true"
